...
                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bcq-Cq-SZc">
                                        <rect key="frame" x="250" y="22.5" width="58" height="39"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="58" id="3k6-eB-ydk"/>
                                            <constraint firstAttribute="height" constant="39" id="uqB-Pe-Okw"/>
                                        </constraints>
                                        <state key="normal" image="next"/>
                                        <connections>
                                            <action selector="nextButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7A9-zh-En8"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Rk-Qw-SiH">
                                        <rect key="frame" x="20" y="22.5" width="58" height="39"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="39" id="Lez-ep-bYc"/>
                                            <constraint firstAttribute="width" constant="58" id="cj5-bq-AGp"/>
                                        </constraints>
                                        <state key="normal" image="previous"/>
                                        <connections>
                                            <action selector="previousButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4Jq-Db-9dS"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4:32" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kDz-HP-SPR">
                                        <rect key="frame" x="251" y="73.5" width="57" height="32"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mnp-Z4-Ohy">
                                        <rect key="frame" x="105" y="48.5" width="31" height="21"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="21" id="6iS-uM-HbY"/>
                                            <constraint firstAttribute="width" constant="31" id="M5p-Wg-Uas"/>
                                        </constraints>
                                        <state key="normal" backgroundImage="Group 3">
                                            <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <segue destination="74Z-8f-qU7" kind="show" id="GSu-77-bFh"/>
                                        </connections>
                                    </button>
...
                                    <textAttributes key="titleTextAttributes">
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    </textAttributes>
                                    <items>
                                        <navigationItem title="Music library" id="m0O-ay-RCj">
                                            <barButtonItem key="leftBarButtonItem" title="back" id="122-Up-jm9">
                                                <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <connections>
                                                    <action selector="backbuttonAction:" destination="74Z-8f-qU7" id="Rcy-bO-Xcc"/>
                                                </connections>
                                            </barButtonItem>
                                        </navigationItem>
...
